# fp-homework

./: stack.yaml
hw0/: hw0.cabal
hw0/app/: Main.hs
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: hw1.cabal
hw1-second-chance/: README.md  hw1-second-chance.cabal
hw1-second-chance/app/: Main.hs
hw1-second-chance/src/Block6/Parsers/: Task1.hs  Task2.hs  Task3.hs
hw1-second-chance/test/: Spec.hs
hw1-second-chance/test/Block6/Parsers/: Tests.hs
hw1/src/: Task1.hs  Task2.hs  Tree.hs
hw1/src/Block2/: Task2.hs
hw1/src/Block3/Monoids/: Task1.hs  Task2.hs
hw1/src/Block4/Functor/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block5/Monad/: Task1.hs
hw1/test/: Spec.hs  Task1Tests.hs  Task2Tests.hs  TreeTests.hs
hw1/test/Block2/: Task2Tests.hs
hw1/test/Block3/Monoids/: Task1Tests.hs  Task2Tests.hs
hw2/: hw2.cabal
hw3/: hw3.cabal
hw4/: hw4.cabal
