name:                hw0
version:             0.1.0.0
synopsis:            Synopsis for task 0
description:         Task 0 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw0#readme
license:             MIT
license-file:        LICENSE
author:              Balahnin Sergey
maintainer:          sergey-dzr2@yandex.ru
copyright:           2020 Balahnin Sergey

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Task1, Task2, Task3, Task4, Task5, Task6, Task7
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

executable hw0
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw0
  default-language:    Haskell2010