name:                hw1-second-chance
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw1-second-chance#readme
license:             MIT
license-file:        LICENSE
author:              Balahnin Sergey
maintainer:          sergey-dzr2@yandex.ru
copyright:           2020 Balahnin Sergey

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block6.Parsers.Task1
                     , Block6.Parsers.Task2
                     , Block6.Parsers.Task3
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

executable hw1-second-chance
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw1-second-chance
  default-language:    Haskell2010

test-suite hw1-second-chance-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Block6.Parsers.Tests
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.9 && <5
                     , tasty
                     , tasty-hunit
                     , tasty-hspec
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , hw1-second-chance
  default-language:    Haskell2010


