name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Balahnin Sergey
maintainer:          sergey-dzr2@yandex.ru
copyright:           2020 Balahnin Sergey

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Task1
                     , Task2
                     , Tree
                     , Block2.Task2
                     , Block3.Monoids.Task1
                     , Block3.Monoids.Task2
                     , Block4.Functor.Task1
                     , Block4.Functor.Task2
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

executable hw1
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw1
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Task1Tests
                     , Task2Tests
                     , TreeTests
                     , Block2.Task2Tests
                     , Block3.Monoids.Task1Tests
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.9 && <5
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , hw1
  default-language:    Haskell2010


